<resources>
    <string name="app_name">Trakt.tv</string>
    <string name="trakt_tv_build_v_1">Mobile client Trakt.tv</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="trakt_tv">Trakt.tv</string>

    <string name="facebook_app_id">269445753408806</string>
    <string name="Exit">Press Back again to Exit.</string>
    <string name="tv_text_title_text">Title</string>
    <string name="tv_text_year_text">Year</string>
    <string name="tv_text_overview_text">Overview</string>
    <string name="tv_text_certification_text">Certification</string>
    <string name="tv_text_network_text">Network</string>
    <string name="tv_text_country_text">Country</string>
    <string name="tv_text_trailer_text">Trailer</string>
    <string name="tv_text_homepage_text">Homepage</string>
    <string name="tv_text_rating_text">Rating</string>
    <string name="tv_text_votes_text">Votes</string>
    <string name="tv_text_trakt_text">Trakt</string>
    <string name="tv_text_slug_text">Slug</string>
    <string name="tv_text_tvdb_text">Tvdb</string>
    <string name="tv_text_imdb_text">Imdb</string>
    <string name="tv_text_tmdb_text">Tmdb</string>
    <string name="tv_text_tvrage_text">Tvrage</string>
    <string name="btn_seasons_text">Seasons</string>
    <string name="internet_connection">Please check Internet Connection</string>
    <string name="facebook_login_successfully">Facebook login successfully</string>
    <string name="facebook_login_cancel">Facebook login canceled</string>
    <string name="facebook_login_error">Facebook login error</string>
    <string name="add_to_favorites">"Add to favorites: "</string>
    <string name="delete_from_favorites">"Delete from favorites: "</string>
    <string name="login_facebook">Please login with facebook</string>
</resources>
